# cursor-free-vip

./: .coverage  .pre-commit-config.yaml  CONTRIBUTION_CHECKLIST.md  CONTRIBUTION_IDEAS.md  FUNCTIONALITY_VERIFIED.md  IMPROVEMENTS_MADE.md  PROJECT_ANALYSIS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_NEW.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  UPDATE_SUMMARY.md  bypass_token_limit.py  bypass_version.py  config.ini.example  cursor_path_detector.py  disable_auto_update.py  pyproject.toml  requirements-dev.txt  test_functionality.py  totally_reset_cursor.py  update_cursor_path.py
docs/: APPLYING_TO_OTHER_EDITORS.md  COMPLETE_SETUP_GUIDE.md  MASTER_DOCUMENTATION.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  TESTING.md  WHAT_HAPPENS_ON_CURSOR_UPDATE.md
tests/: __init__.py  conftest.py  test_utils.py
